2004-12-07 00:20  svu
	
	* configure.in: using ac_x_includes to make configure
	work better. Improved backend checking and diagnostics.
	* autogen.sh: updating the version of tools

2004-12-02 21:47  svu
	
	* configure.in: xmodmap support is built by default

2004-12-02 21:20  svu
	
	* libxklavier/xklavier_xkb.c: Fix for compiling without
	headers

2004-12-02 00:21  svu
	
	* libxklavier/xklavier_xkb.c: Build patch by Andrei 
	Yurkevich

2004-11-28 16:00  svu
	
	* NEWS: Preparing 1.12

2004-11-27 16:00  svu
	
	* libxklavier: Some fixes in xmodmap. First version,
	working somehow

2004-11-25 23:00  svu
	
	* libxklavier, tests: MASSIVE commit. First version
	with somewhat working xmodmap support. Broken API

2004-11-04 19:00  svu

	* libxklavier/Makefile.am,

	* libxklavier/Makefile.am,
	libxklavier/xklavier.c,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_config_xmm.c,
	libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_private_xmm.h,
	libxklavier/xklavier_xmm.c: going xmodmappy

2004-11-04 19:00  svu

	* libxklavier/xklavier_config_i18n.c,
	tests/Makefile.am,
	tests/test_config.c,
	tests/test_monitor.c: 64-bit compatibility patch from 
	James Henstridge. -Wall -Werror for tests.


2004-11-02 22:55  svu

	* libxklavier/Makefile.am,
	  libxklavier/xklavier.c,
	  libxklavier/xklavier.h,
	  libxklavier/xklavier_config.c,
	  libxklavier/xklavier_config_i18n.c,
	  libxklavier/xklavier_config_xkb.c,
	  libxklavier/xklavier_dump.c,
	  libxklavier/xklavier_evt.c,
	  libxklavier/xklavier_evt_xkb.c,
	  libxklavier/xklavier_private.h,
	  libxklavier/xklavier_private_xkb.h,
	  libxklavier/xklavier_props.c,
	  libxklavier/xklavier_xkb.c: virtualizing everything (?) which
	  involves XKB directly. The VTable is introduced. So, now another
	  VTable (xmodmap) can be created, hopefully...
	* configure.in: preparing 1.11

2004-10-31 21:00  svu

	* libxklavier/xklavier_config_xkb.c:
	Fixing the xkbcomp command line. Ubercool!
